--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,14 +3,15 @@ agp = "8.4.0-alpha13"
 kotlin = "1.9.22"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.02.02"
-composeMaterial = "1.7.0-alpha04"
+composeBom = "2024.03.00"
+composeMaterial = "1.7.0-alpha05"
 androidxHiltNavigationCompose = "1.2.0"
 hilt = "2.51"
 ksp = "1.9.22-1.0.18"
 voyager = "1.0.0"
 room = "2.6.1"
 timber = "5.0.1"
+coil = "2.6.0"
 
 # Testing
 junitVersion = "1.1.5"
@@ -38,6 +39,7 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", v
 voyager-navigator = { group = "cafe.adriel.voyager", name = "voyager-navigator", version.ref = "voyager" }
 voyager-transitions = { group = "cafe.adriel.voyager", name = "voyager-transitions", version.ref = "voyager" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
 # Testing
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
